--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles/styles.css">
    <title>Rent cars</title>
 </head>
 <body>
-   
+   <header class="header">
+      <div class="container">
+         <div class="logo">
+            <img src="images/logo.png" alt="Logo">
+         </div>
+         <nav class="menu">
+            <ul>
+               <li class="menu-items">
+                  <a href="#">Главная</a>
+               </li>
+               <li class="menu-items">
+                  <a href="#">Автомобили</a>
+               </li>
+               <li class="menu-items">
+                  <a href="#">Бронирование авто</a>
+               </li>
+               
+            </ul>
+         </nav>
+      </div>
+   </header>
 </body>
 </html>
