--- a/index.html
+++ b/index.html
@@ -44,5 +44,39 @@
          </div>
       </div>
    </section>
+
+   <section class="car">
+      <div class="container">
+         <div class="car-items">
+            <h2 class="sub-title">Наш автопарк</h2>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/1.png" alt="Spyder">
+               </div>
+               <div class="car-item-title">Lamborghini Huracan Spyder</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/gear.png" alt="Gear">
+                     <div>Привод</div>
+                     <div>полный</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>5.2 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/belt.png" alt="Belt">
+                     <div>Кол-во мест</div>
+                     <div>2</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
 </body>
 </html>
