--- a/index.html
+++ b/index.html
@@ -75,6 +75,136 @@
                   <button class="button">Забронировать</button>
                </div>
             </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/2.png" alt="Corvette">
+               </div>
+               <div class="car-item-title">Chevrolet Corvette</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/gear.png" alt="Gear">
+                     <div>Привод</div>
+                     <div>полный</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>6.2 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/belt.png" alt="Belt">
+                     <div>Кол-во мест</div>
+                     <div>2</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/3.png" alt="California">
+               </div>
+               <div class="car-item-title">Ferrari California</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/gear.png" alt="Gear">
+                     <div>Привод</div>
+                     <div>полный</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>3.9 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/belt.png" alt="Belt">
+                     <div>Кол-во мест</div>
+                     <div>4</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/4.png" alt="Urus">
+               </div>
+               <div class="car-item-title">Lamborghini Urus</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/gear.png" alt="Gear">
+                     <div>Привод</div>
+                     <div>полный</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>4.0 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/belt.png" alt="Belt">
+                     <div>Кол-во мест</div>
+                     <div>5</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/5.png" alt="R8">
+               </div>
+               <div class="car-item-title">Audi R8</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/gear.png" alt="Gear">
+                     <div>Привод</div>
+                     <div>полный</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>5.2 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/belt.png" alt="Belt">
+                     <div>Кол-во мест</div>
+                     <div>2</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/6.png" alt="Camaro">
+               </div>
+               <div class="car-item-title">Chevrolet Camaro</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/gear.png" alt="Gear">
+                     <div>Привод</div>
+                     <div>полный</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>2.0 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/belt.png" alt="Belt">
+                     <div>Кол-во мест</div>
+                     <div>4</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
          </div>
       </div>
    </section>
