--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
    <section class="price">
       <div class="container">
-         <h2 class="sud-title">Узнать цену и забронировать</h2>
+         <h2 class="sub-title">Узнать цену и забронировать</h2>
          <div class="price-text">
             Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
          </div>
@@ -221,7 +221,7 @@
             <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует">
             <button class="button">Узнать цену</button>
          </form>
-         <img src="images/rolls.png" alt="Rolls">
+         <img src="images/rolls.png" alt="Rolls" class="price-image">
       </div>
    </section>
 </body>
