--- a/index.html
+++ b/index.html
@@ -224,5 +224,16 @@
          <img src="images/rolls.png" alt="Rolls" class="price-image">
       </div>
    </section>
+
+   <footer class="footer">
+      <div class="container">
+         <div class="logo">
+            <img src="images/logo.png" alt="Logo">
+         </div>
+         <div class="rights">
+            Все права защищены &copy; 2022
+         </div>
+      </div>
+   </footer>
 </body>
 </html>
