--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                   <a href="#">Главная</a>
                </li>
                <li class="menu-items">
-                  <a href="#">Автомобили</a>
+                  <a href="#cars">Автомобили</a>
                </li>
                <li class="menu-items">
-                  <a href="#">Бронирование авто</a>
+                  <a href="#price">Бронирование авто</a>
                </li>
             </ul>
          </nav>
@@ -45,7 +45,7 @@
       </div>
    </section>
 
-   <section class="car">
+   <section class="car" id="cars">
       <div class="container">
          <h2 class="sub-title">Наш автопарк</h2>
          <div class="car-items">
@@ -209,7 +209,7 @@
       </div>
    </section>
 
-   <section class="price">
+   <section class="price" id="price">
       <div class="container">
          <h2 class="sub-title">Узнать цену и забронировать</h2>
          <div class="price-text">
