homework is done

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                <div class="car-item-title">Lamborghini Huracan Spyder</div>
                <div class="car-item-info">
                   <div class="car-item-point">
-                     <img src="images/gear.png" alt="Gear">
-                     <div>Привод</div>
-                     <div>полный</div>
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
                   </div>
                   <div class="car-item-point">
                      <img src="images/wheel.png" alt="Wheel">
@@ -66,9 +66,9 @@
                      <div>5.2 л.с.</div>
                   </div>
                   <div class="car-item-point">
-                     <img src="images/belt.png" alt="Belt">
-                     <div>Кол-во мест</div>
-                     <div>2</div>
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2019</div>
                   </div>
                </div>
                <div class="car-item-action">
@@ -82,9 +82,9 @@
                <div class="car-item-title">Chevrolet Corvette</div>
                <div class="car-item-info">
                   <div class="car-item-point">
-                     <img src="images/gear.png" alt="Gear">
-                     <div>Привод</div>
-                     <div>полный</div>
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
                   </div>
                   <div class="car-item-point">
                      <img src="images/wheel.png" alt="Wheel">
@@ -92,9 +92,9 @@
                      <div>6.2 л.с.</div>
                   </div>
                   <div class="car-item-point">
-                     <img src="images/belt.png" alt="Belt">
-                     <div>Кол-во мест</div>
-                     <div>2</div>
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2017</div>
                   </div>
                </div>
                <div class="car-item-action">
@@ -108,9 +108,9 @@
                <div class="car-item-title">Ferrari California</div>
                <div class="car-item-info">
                   <div class="car-item-point">
-                     <img src="images/gear.png" alt="Gear">
-                     <div>Привод</div>
-                     <div>полный</div>
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
                   </div>
                   <div class="car-item-point">
                      <img src="images/wheel.png" alt="Wheel">
@@ -118,9 +118,9 @@
                      <div>3.9 л.с.</div>
                   </div>
                   <div class="car-item-point">
-                     <img src="images/belt.png" alt="Belt">
-                     <div>Кол-во мест</div>
-                     <div>4</div>
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2018</div>
                   </div>
                </div>
                <div class="car-item-action">
@@ -134,9 +134,9 @@
                <div class="car-item-title">Lamborghini Urus</div>
                <div class="car-item-info">
                   <div class="car-item-point">
-                     <img src="images/gear.png" alt="Gear">
-                     <div>Привод</div>
-                     <div>полный</div>
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
                   </div>
                   <div class="car-item-point">
                      <img src="images/wheel.png" alt="Wheel">
@@ -144,9 +144,9 @@
                      <div>4.0 л.с.</div>
                   </div>
                   <div class="car-item-point">
-                     <img src="images/belt.png" alt="Belt">
-                     <div>Кол-во мест</div>
-                     <div>5</div>
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2019</div>
                   </div>
                </div>
                <div class="car-item-action">
@@ -160,9 +160,9 @@
                <div class="car-item-title">Audi R8</div>
                <div class="car-item-info">
                   <div class="car-item-point">
-                     <img src="images/gear.png" alt="Gear">
-                     <div>Привод</div>
-                     <div>полный</div>
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
                   </div>
                   <div class="car-item-point">
                      <img src="images/wheel.png" alt="Wheel">
@@ -170,9 +170,9 @@
                      <div>5.2 л.с.</div>
                   </div>
                   <div class="car-item-point">
-                     <img src="images/belt.png" alt="Belt">
-                     <div>Кол-во мест</div>
-                     <div>2</div>
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2018</div>
                   </div>
                </div>
                <div class="car-item-action">
@@ -186,9 +186,9 @@
                <div class="car-item-title">Chevrolet Camaro</div>
                <div class="car-item-info">
                   <div class="car-item-point">
-                     <img src="images/gear.png" alt="Gear">
-                     <div>Привод</div>
-                     <div>полный</div>
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
                   </div>
                   <div class="car-item-point">
                      <img src="images/wheel.png" alt="Wheel">
@@ -196,9 +196,87 @@
                      <div>2.0 л.с.</div>
                   </div>
                   <div class="car-item-point">
-                     <img src="images/belt.png" alt="Belt">
-                     <div>Кол-во мест</div>
-                     <div>4</div>
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2019</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/7.png" alt="Quattroporte">
+               </div>
+               <div class="car-item-title">Maserati Quattroporte</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>3.0 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2018</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/8.png" alt="Challenger">
+               </div>
+               <div class="car-item-title">Dodge Challenger</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>6.4 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2019</div>
+                  </div>
+               </div>
+               <div class="car-item-action">
+                  <button class="button">Забронировать</button>
+               </div>
+            </div>
+            <div class="car-item">
+               <div class="car-item-image">
+                  <img src="/images/9.png" alt="GT-R">
+               </div>
+               <div class="car-item-title">Nissan GT-R</div>
+               <div class="car-item-info">
+                  <div class="car-item-point">
+                     <img src="images/transmission.png" alt="Transmission">
+                     <div>Коробка</div>
+                     <div>автомат</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/wheel.png" alt="Wheel">
+                     <div>Двигатель</div>
+                     <div>3.8 л.с.</div>
+                  </div>
+                  <div class="car-item-point">
+                     <img src="images/year.png" alt="Year">
+                     <div>Год выпуска</div>
+                     <div>2019</div>
                   </div>
                </div>
                <div class="car-item-action">
