--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          <div class="car-items">
             <div class="car-item">
                <div class="car-item-image">
-                  <img src="/images/1.png" alt="Spyder">
+                  <img src="images/1.png" alt="Spyder">
                </div>
                <div class="car-item-title">Lamborghini Huracan Spyder</div>
                <div class="car-item-info">
@@ -77,7 +77,7 @@
             </div>
             <div class="car-item">
                <div class="car-item-image">
-                  <img src="/images/2.png" alt="Corvette">
+                  <img src="images/2.png" alt="Corvette">
                </div>
                <div class="car-item-title">Chevrolet Corvette</div>
                <div class="car-item-info">
@@ -103,7 +103,7 @@
             </div>
             <div class="car-item">
                <div class="car-item-image">
-                  <img src="/images/3.png" alt="California">
+                  <img src="images/3.png" alt="California">
                </div>
                <div class="car-item-title">Ferrari California</div>
                <div class="car-item-info">
@@ -129,7 +129,7 @@
             </div>
             <div class="car-item">
                <div class="car-item-image">
-                  <img src="/images/4.png" alt="Urus">
+                  <img src="images/4.png" alt="Urus">
                </div>
                <div class="car-item-title">Lamborghini Urus</div>
                <div class="car-item-info">
@@ -155,7 +155,7 @@
             </div>
             <div class="car-item">
                <div class="car-item-image">
-                  <img src="/images/5.png" alt="R8">
+                  <img src="images/5.png" alt="R8">
                </div>
                <div class="car-item-title">Audi R8</div>
                <div class="car-item-info">
@@ -181,7 +181,7 @@
             </div>
             <div class="car-item">
                <div class="car-item-image">
-                  <img src="/images/6.png" alt="Camaro">
+                  <img src="images/6.png" alt="Camaro">
                </div>
                <div class="car-item-title">Chevrolet Camaro</div>
                <div class="car-item-info">
